# meshtastic_mac_client

./: .gitignore  README.md  pyproject.toml  requirements.txt
meshtastic_mac_client/: main.py  temp_map.html
meshtastic_mac_client/core/: meshtastic_manager.py
meshtastic_mac_client/ui/: admin_panel.py  chat_panel.py  config_panel.py  connection_panel.py  main_window.py  map_panel.py  node_list_panel.py  telemetry_panel.py
