[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic_mac_client"
version = "0.1.0"
description = "A native, fully-featured desktop application built with PyQt6 and qasync to manage Meshtastic nodes via Bluetooth Low Energy (BLE) on macOS."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: Mac OS X 10.6 or newer"
]

[tool.setuptools]
include-package-data = true
packages = ["meshtastic_mac_client"]

[project.scripts]
"meshtastic-mac-client" = "meshtastic_mac_client.main:main"

