[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic_mac_client"
version = "0.1.0"
description = "A native desktop application for Meshtastic nodes via BLE on macOS."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "PyQt6",
    "qasync",
    "meshtastic",
    "bleak",
]

[project.scripts]
meshtastic-mac-client = "meshtastic_mac_client.main:main"

[tool.setuptools]
# Use find_packages to automatically detect ui, core, and assets
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
# Ensures any non-python files in assets are included
"*" = ["assets/*"]