[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic_mac_client"
version = "0.1.0"
description = "A native desktop application for Meshtastic nodes via BLE on macOS."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "PyQt6>=6.6.1",
    "qasync>=0.27.1",
    "meshtastic>=2.7.7",  # Required for meshtastic.ble
    "bleak>=0.21.1",      # Essential for macOS BLE stability
    "pyqtgraph>=0.13.3",
    "folium>=0.15.1",
    "Pillow>=10.1.0",
    "pypubsub>=4.0.3",
]

[project.scripts]
meshtastic-mac-client = "meshtastic_mac_client.main:main"

[tool.setuptools]
# Use find_packages to automatically detect ui, core, and assets
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
# Ensures any non-python files in assets are included
"*" = ["assets/*"]